# MSBuild.Sdk.CMake

./: .editorconfig  .gitignore  LICENSE  MSBuild.Sdk.CMake.sln  MSBuild.Sdk.CMake.slngenproj  MSBuild.Sdk.CMake.slnproj  README.md  appveyor.yml  build.cake  nuget.config
samples/: nuget.config
samples/Basic/: Basic.cmproj
samples/CustomConfiguration/: CMakeLists.txt  CustomConfiguration.cmproj
samples/Generator/: CMakeLists.txt  Generator.cmproj
src/MSBuild.Sdk.CMake/: MSBuild.Sdk.CMake.csproj  MakeCMakeDefineTask.cs
src/MSBuild.Sdk.CMake.Template.Console/cmakeproject/: CMakeLists.txt
src/MSBuild.Sdk.CMake.Template.Library/: MSBuild.Sdk.CMake.ProjectTemplate.nuspec
src/MSBuild.Sdk.CMake.Template.Library/cmakeproject/: CMakeLists.txt  cmakeproject.cmproj  cmakeproject.cpp
src/MSBuild.Sdk.CMake/Sdk/: Sdk.props  Sdk.targets
templates/MSBuild.Sdk.CMake.Template.Console/: MSBuild.Sdk.CMake.ProjectTemplate.nuspec  MSBuild.Sdk.CMake.Template.Console.nuspec
templates/MSBuild.Sdk.CMake.Template.Console/cmakeproject/: CMakeLists.txt
templates/MSBuild.Sdk.CMake.Template.Console/content/.template.config/: template.json
templates/MSBuild.Sdk.CMake.Template.Library/: MSBuild.Sdk.CMake.ProjectTemplate.nuspec  MSBuild.Sdk.CMake.Template.Library.nuspec
templates/MSBuild.Sdk.CMake.Template.Library/cmakeproject/: CMakeLists.txt  cmakeproject.h
templates/MSBuild.Sdk.CMake.Template.Library/content/.template.config/: template.json
templates/MSBuild.Sdk.CMake.Template.Library/content/cmakeproject/: CMakeLists.txt  cmakeproject.cpp  cmakeproject.h
tests/Install/: CMakeLists.txt  Install.cmproj
tests/Regular/: CMakeLists.txt  Regular.cmproj
